src/tess/tl/test/fail/test_fail_integer_directed_standalone_int_to_cptrdiff.tl
#module main

accept_cptrdiff(x: CPtrDiff) -> CPtrDiff { x }

main() {
    x: Int := 42
    accept_cptrdiff(x)
    0
}
